feat: add security for openAPI
